# SinoQuant

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  VERSION  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  question.md
.github/workflows/: docker-publish.yml
app/: LICENSE  __init__.py  __main__.py  main.py  worker.py
app/constants/: model_capabilities.py
app/core/: __init__.py  config.py  config_bridge.py  database.py  logging_config.py  startup_validator.py  unified_config.py
app/models/: __init__.py  alpha.py  analysis.py  config.py  notification.py  operation_log.py  screening.py  stock_models.py  user.py  vendor_config.py
app/routers/: admin.py  alpha.py  analysis.py  auth_db.py  cache.py  favorites.py  (+8 more)
cli/: __init__.py  encrypt_vendor_keys.py  main.py  models.py  sync_single_stock.py  utils.py
config/: README.md  logging.toml  logging_docker.toml
docker/: nginx.conf
docs/: ANALYST_DATA_CONFIGURATION.md  DOCKER_DEV_源码挂载开发指南.md  README.md  SILICONFLOW_SETUP_GUIDE.md  analysis_prefetch_guide.md  database_setup.md  google-ai-base-url-support.md  import_config_with_script.md  test_environment_setup.md
examples/: README.md  __init__.py  batch_analysis.py  cli_demo.py  config_management_demo.py  custom_analysis_demo.py  data_dir_config_demo.py  demo_deepseek_analysis.py  my_stock_analysis.py  simple_analysis_demo.py  stock_list_example.py  stock_query_examples.py  test_enhanced_data_integration.py  test_installation.py  test_news_timeout.py  token_tracking_demo.py  tushare_demo.py  tushare_unified_demo.py
frontend/: LICENSE  README.md  index.html  package.json  vite.config.ts
sinoquant/: __init__.py  default_config.py
tests/: README.md  __init__.py  conftest.py  test_debate_flow_simulation.py  test_research_depth_5_levels.py  test_sanitize_export.py  test_vendor_config.py
(+322 files in other folders)
